tests/error/ptr_static_outside.gw
#! [contains] can only be used at class scope
funptr static void Test();
